CAP-279 Modularized code. Added NFC source and header files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,9 +11,11 @@ target_link_libraries(main PRIVATE
         usb
         tinyusb_device 
         tinyusb_board
+        led
         )
 
 # create map/bin/hex file etc.
 pico_add_extra_outputs(main)
 
 add_subdirectory(usb)
+add_subdirectory(led)
