--- a/src/nfcc/CMakeLists.txt
+++ b/src/nfcc/CMakeLists.txt
@@ -6,6 +6,9 @@ target_sources(nfc INTERFACE
         ${CMAKE_CURRENT_LIST_DIR}/NxpNci.c
         ${CMAKE_CURRENT_LIST_DIR}/P2P_NDEF.c
         ${CMAKE_CURRENT_LIST_DIR}/tml.c
+        ${CMAKE_CURRENT_LIST_DIR}/ndef_helper.c
+        ${CMAKE_CURRENT_LIST_DIR}/nfc_task.c
+
 )
 
 # Add include files
