Initialized i2c for testing purposes

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,7 @@ target_link_libraries(main PRIVATE
         tinyusb_device 
         tinyusb_board
         led
+        test
         )
 
 # create map/bin/hex file etc.
@@ -19,3 +20,4 @@ pico_add_extra_outputs(main)
 
 add_subdirectory(usb)
 add_subdirectory(led)
+add_subdirectory(test)
