--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,6 +13,10 @@ target_link_libraries(main PRIVATE
         tinyusb_board
         led
         test
+        nfc
+        pico_time
+        pico_mem_ops
+        gpio
         )
 
 # create map/bin/hex file etc.
@@ -21,3 +25,5 @@ pico_add_extra_outputs(main)
 add_subdirectory(usb)
 add_subdirectory(led)
 add_subdirectory(test)
+add_subdirectory(nfcc)
+add_subdirectory(gpio)
