--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,6 +17,7 @@ target_link_libraries(main PRIVATE
         pico_time
         pico_mem_ops
         gpio
+        board
         )
 
 # create map/bin/hex file etc.
@@ -27,3 +28,4 @@ add_subdirectory(led)
 add_subdirectory(test)
 add_subdirectory(nfcc)
 add_subdirectory(gpio)
+add_subdirectory(board)
