Trying to match example code

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,15 +13,17 @@ target_link_libraries(main PRIVATE
         tinyusb_board
         led
         test
-        nfc
+        nfcc
         pico_time
         pico_mem_ops
         gpio
+        drivers
         )
 
 # create map/bin/hex file etc.
 pico_add_extra_outputs(main)
 
+add_subdirectory(drivers)
 add_subdirectory(usb)
 add_subdirectory(led)
 add_subdirectory(test)
