--- a/src/nfcc/CMakeLists.txt
+++ b/src/nfcc/CMakeLists.txt
@@ -1,8 +1,8 @@
 # Create INTERFACE libraries
-add_library(nfc INTERFACE)
+add_library(nfcc INTERFACE)
 
 # Target the sources that are to be included in this library
-target_sources(nfc INTERFACE
+target_sources(nfcc INTERFACE
         ${CMAKE_CURRENT_LIST_DIR}/NxpNci.c
         ${CMAKE_CURRENT_LIST_DIR}/P2P_NDEF.c
         ${CMAKE_CURRENT_LIST_DIR}/tml.c
@@ -12,13 +12,14 @@ target_sources(nfc INTERFACE
 )
 
 # Add include files
-target_include_directories(nfc INTERFACE 
+target_include_directories(nfcc INTERFACE 
     ${CMAKE_CURRENT_LIST_DIR}/include
 )
 
 # Target other library dependencies
-target_link_libraries(nfc INTERFACE
+target_link_libraries(nfcc INTERFACE
         pico_stdlib
         pico_time
         pico_mem_ops
+        drivers
 )
