Waiting for device discovery

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,9 +16,11 @@ target_link_libraries(main PRIVATE
         nfcc
         pico_time
         pico_mem_ops
-        #gpio
         drivers
         )
+
+# Declare global defines
+target_compile_definitions(main PRIVATE P2P_SUPPORT)
 
 # create map/bin/hex file etc.
 pico_add_extra_outputs(main)
@@ -28,4 +30,3 @@ add_subdirectory(usb)
 add_subdirectory(led)
 add_subdirectory(test)
 add_subdirectory(nfcc)
-#add_subdirectory(gpio)
